--- a/demo/src/main/res/layout/activity_remote_test.xml
+++ b/demo/src/main/res/layout/activity_remote_test.xml
@@ -30,6 +30,13 @@
             android:text="执行子进程方法" />
 
         <Button
+            android:id="@+id/start_client_memory"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="子进程共享内存" />
+
+        <Button
             android:id="@+id/start_remote_memory"
             android:onClick="onClick"
             android:layout_width="match_parent"
